5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1837_3218.log
== TEST (2019-07-02 08:42:44) 
-- CODE:
print(10+16+8-40-16-2)
-- OUTPUT:
-24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:48:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
for i in range(n):
	for j in range(n):
		m[i,j] = int(input("numero: "))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:48:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		m[i,j] = int(input("numero: "))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = zeros(n, dtype=int)
for x in range(n):
	v[x] = input("numeros: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:52:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v[x] = input("numeros: ")
v[x]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:52:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v[x] = str(input("numeros: "))
v[x]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:53:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v[x] = "1"
v[x]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:53:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v[x] = v[x]+"1"
v[x]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v[x] = v[x] + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v[x] = v[x] + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v[x] = v[x] + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v[x] = v[x] + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v[x] = v[x] + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = " "
for x in range(n):
	v = v + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:55:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v = v + "1"
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:56:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v = v + "1"
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:56:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v = v + "1"
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:57:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v = v + "," + input("numeros: ")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:57:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
v = ""
for x in range(n):
	v = v + "," + input("numeros: ")
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:07:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	for y in v:
		a = ""
		if y != "":
			a = a + y
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
	i = i + 1
	j = 0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:07:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	for y in v:
		a = ""
		if y != "":
			a = a + y
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:08:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	for y in v:
		a = ""
		if y != "":
			a = a + y
			print(a)
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:09:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != "":
			a = a + y
			print(a)
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:09:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != "":
			a = a + y
			print(y)
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:09:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(y)
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:10:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
		else:
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:10:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
		else:
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:11:21) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(y)
		else:
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:11:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(a)
		else:
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:13:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(a)
		elif (y == 0) or (y = v[-1]):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
File "XXXX", line 15
    elif (y == 0) or (y = v[-1]):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:13:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(a)
		elif (y == 0) or (y == v[-1]):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:13:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(a)
		elif (y == " ") or (y == v[-1]):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:14:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(v[-1])
		elif (y == " ") or (y == v[-1]):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:15:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(y,v[-1])
		elif ((y == " ") or (y == v[-1])):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:16:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(y,v[-1])
			print(y==v[-1])
		elif ((y == " ") or (y == v[-1])):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:16:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			print(y,v[-1])
			print(a)
			print(y==v[-1])
		elif ((y == " ") or (y == v[-1])):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:17:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
		elif ((y == " ") or (y == v[-1])):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:17:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
		elif ((y == " ") or (int(y) == int(v[-1]))):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:17:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
		elif ((y == " ") or (int(y) == int(v[-1]))):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:19:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			if y == v[-1]:
				a = int(a)
				m[i,j] = a
				print(m)
		elif ((y == " ")):
			a = int(a)
			m[i,j] = a
			print(m)
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:20:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			if y == v[-1]:
				a = int(a)
				m[i,j] = a
		elif ((y == " ")):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:24:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			if y == v[-1]:
				a = int(a)
				m[i,j] = a
		elif ((y == " ")):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
dp = 0
for i in range(n):
	for j in range(n):
		if i == j:
			dp = dp + m[i,j]
ds = 0
for j in range(n):
	ds = ds + m[j, n-1-j]
print(dp,ds)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 09:25:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			if y == v[-1]:
				a = int(a)
				m[i,j] = a
		elif ((y == " ")):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
dp = 0
for i in range(n):
	for j in range(n):
		if i == j:
			dp = dp + m[i,j]
ds = 0
for j in range(n):
	ds = ds + m[j, n-1-j]
print(dp-ds)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:25:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("matriz: "))
m = zeros((n,n), dtype=int)
i = 0
j = 0
for x in range(n):
	v = ""
	v = v + input("numeros: ")
	a = ""
	for y in v:
		if y != " ":
			a = a + y
			if y == v[-1]:
				a = int(a)
				m[i,j] = a
		elif ((y == " ")):
			a = int(a)
			m[i,j] = a
			j = j + 1
			a = ""
	i = i + 1
	j = 0
dp = 0
for i in range(n):
	for j in range(n):
		if i == j:
			dp = dp + m[i,j]
ds = 0
for j in range(n):
	ds = ds + m[j, n-1-j]
print(dp-ds)
-- EXECUTION TIME:
1.15908
-- TEST CASE 1:
---- input:
3
16 8 9
4 1 3
8 7 8
---- correct output:
7
---- user output:
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
